--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "node ./script/create.env.js && webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
