--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A minimal portfolio with Vanilla JavaScript",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.dev.js",
-    "build": "node ./script/create.env.js && webpack --config webpack.config.js"
+    "dev": "webpack serve --config webpack.config.dev.js",
+    "build": "node ./script/create.env.js && webpack --config webpack.config.js",
+    "build:analyze": "webpack --mode production --config webpack.config.js --analyze"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.24.2",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
